--- a/report/bagging.tex
+++ b/report/bagging.tex
@@ -3,7 +3,7 @@
 \chapter{The Bagging Algorithm}
 
 \textit{Bagging} is short for \textit{Bootstrap Aggregating}, a machine learning meta-algorithm used in statistical classification and regression. Like AdaBoost, it works with base classifiers.\\
-Bagging samples $m$ subset $S^{\prime}$ of the same size from a training set $S$ uniformly with replacement. Every $S^{\prime}$ are given in input to the chosen base classifiers and their output is combined.
+Bagging samples $m$ subsets $S^{\prime}$ of the same size from a training set $S$ uniformly with replacement. Each $S^{\prime}$ is given as input to the chosen base classifiers and their output is combined.
 \begin{algorithm}[htpb]
 	\caption{}
 	\label{alg:bagging}
