added C++ symbol and conclusion.tex input

--- a/report/main.tex
+++ b/report/main.tex
@@ -8,10 +8,13 @@
 \usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{amsmath}
+\usepackage{subfig}
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
 \usepackage[font={small,it}]{caption}
 
+\newcommand{\CC}{C\nolinebreak\hspace{-.05em}\raisebox{.4ex}{\tiny\bf +}\nolinebreak\hspace{-.10em}\raisebox{.4ex}{\tiny\bf +}}
+\def\CC{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\tiny\bf ++}}}
 \DeclareMathOperator*{\argmax}{argmax}
 
 \begin{document}
@@ -30,7 +33,7 @@
 \input onevsall.tex
 \input crossvalidation.tex
 \input results.tex
-
+\input conclusion.tex
 %\bibliographystyle{plain}
 %\bibliography{local}
 
