--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -3,7 +3,7 @@
 Ensemble methods use a set of multiple base classifiers to obtain results that are better than the ones provided by the single classifiers. In this project we've used \textit{AdaBoost}, a boosting meta-algorithm which belongs to the ensemble learning family, to classify forests given a set of features such as elevation, aspect, soil types and many others. The base classifiers used by AdaBoost are \textit{decision stumps}. A decision stump is a decision tree composed of a single internal node immediately connected to the terminal nodes. In this project, the decision stumps are composed of the root and two leaves and will predict in the set $\lbrace-1, +1\rbrace$. Afterwards, we've implemented the \textit{Bagging Algorithm} to perform the same classification. We've used \textit{one-vs-all} to perform multi-class classification with both Bagging and AdaBoost. Finally we've used external \textit{cross-validation} to tune the hyper-parameter $T$ of both Bagging and AdaBoost and evaluate the accuracy of the algorithms.
 
 This report will start with an abstract description of all the tools that have been used and end with a final chapter regarding this project results.\\
-This project has been implemented in C++ and the whole code-base can be found on GitHub\footnote{https://github.com/dariost/AdaBoost} as well as two utilities written in Python, one for result plotting from \texttt{json} files and the other one for parsing the data-set in \texttt{csv} format and convert it in another format that is easier to parse in C++. The final data-set is then of the form:
+This project has been implemented in C++ and the whole code-base can be found in \texttt{AdaBoost.zip} or on GitHub\footnote{https://github.com/dariost/AdaBoost} as well as two utilities written in Python, one for result plotting from \texttt{json} files and the other one for parsing the data-set in \texttt{csv} format and convert it in another format that is easier to parse in C++. The final data-set is then of the form:
 \begin{center}
 \begin{tabular}{ccccccccc}
 	15120 & 54 & 7 &  &  &  &  &  &  \\ 
